--- a/docker/Dockerfile.ubi.amd64
+++ b/docker/Dockerfile.ubi.amd64
@@ -11,6 +11,7 @@ COPY LICENSE.txt /licenses
 # This is the release of Vault to pull in and the key to verify the download.
 ARG VAULT_VERSION
 ARG VAULT_GPGKEY
+ARG ARCH
 
 # Create a vault user and group first so the IDs get set the same way.
 
@@ -18,7 +19,6 @@ ARG VAULT_GPGKEY
 RUN set -eux; \
     microdnf update -y; \
     microdnf install -y ca-certificates shadow-utils gnupg openssl libcap wget tzdata unzip && \
-    ARCH='amd64'; \
     found=''; \
     for server in \
         hkp://p80.pool.sks-keyservers.net:80 \
