--- a/docker/Dockerfile.ubi.amd64
+++ b/docker/Dockerfile.ubi.amd64
@@ -12,6 +12,7 @@ COPY LICENSE.txt /licenses
 ARG VAULT_VERSION
 ARG VAULT_GPGKEY
 ARG ARCH
+ARG VAULT_PLUGIN_HASH
 
 # Create a vault user and group first so the IDs get set the same way.
 
@@ -51,7 +52,7 @@ RUN set -eux; \
 # the server will be started with /vault/config as the configuration directory so you can add additional config files in that location.
 RUN groupadd vault && \
     useradd -r -g vault vault
-
+ENV VAULT_PLUGIN_HASH ${VAULT_PLUGIN_HASH}
 ENV HOME /home/vault
 RUN mkdir -p /vault/logs && \
     mkdir -p /vault/file && \
