--- a/docker/Dockerfile.ubi.amd64
+++ b/docker/Dockerfile.ubi.amd64
@@ -50,8 +50,10 @@ RUN set -eux; \
 # /vault/logs is made available to use as a location to store audit logs
 # /vault/file is made available to use as a location with the file storage backend
 # the server will be started with /vault/config as the configuration directory so you can add additional config files in that location.
-RUN groupadd -g 1000 vault && \
-    useradd -rm -u 1000 -g vault vault
+RUN useradd -r -u 1000 -g root vault \
+        && mkdir /home/vault \
+        && chown -R vault:root /home/vault
+
 ENV VAULT_PLUGIN_HASH ${VAULT_PLUGIN_HASH}
 ENV HOME /home/vault
 RUN mkdir -p /vault/logs && \
@@ -59,7 +61,7 @@ RUN mkdir -p /vault/logs && \
     mkdir -p /vault/config && \
     mkdir -p /vault/plugins && \
     mkdir -p /openhorizon/policy && \
-    chown -R vault /vault && chown -R vault $HOME && chown -R vault /openhorizon && \
+    chown -R vault:root /vault && chown -R vault:root $HOME && chown -R vault:root /openhorizon && \
     chgrp -R 0 $HOME && chmod -R g+rwX $HOME && \
     chgrp -R 0 /vault && chmod -R g+rwX /vault && \
     chgrp -R 0 /openhorizon && chmod -R g+rwX /openhorizon
