--- a/docker/Dockerfile.ubi.amd64
+++ b/docker/Dockerfile.ubi.amd64
@@ -56,6 +56,7 @@ RUN useradd -r -u 1000 -g root vault \
 
 ENV VAULT_PLUGIN_HASH ${VAULT_PLUGIN_HASH}
 ENV HOME /home/vault
+ENV VAULT_PLUGIN_AUTOMTLS_ENABLED false
 RUN mkdir -p /vault/logs && \
     mkdir -p /vault/file && \
     mkdir -p /vault/config && \
