--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -18,6 +18,9 @@ env:
 jobs:
   # Build and pushes to Dockerhub
   build-push:
+    # Prevent this action from running in forks
+    if: github.repository_owner == 'open-horizon'
+
     runs-on: ubuntu-20.04
 
     # Environment variables available to all steps
