Updated to use latest 1.14.8 Vault. Added new workflow_dispatch to allow building as needed
Signed-off-by: Ben Courliss <bencourliss@ibm.com>

--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -3,6 +3,7 @@ name: build-push
 
 # This workflow triggers on any push (or merge) to the listed branch(es)
 on:
+  workflow_dispatch:
   push:
     branches:
       - master
