--- a/docker/Dockerfile.ubi.amd64
+++ b/docker/Dockerfile.ubi.amd64
@@ -1,4 +1,8 @@
-FROM registry.access.redhat.com/ubi9-minimal:latest
+# Building microdnf from ubi9-minimal base
+FROM registry.access.redhat.com/ubi9-minimal:latest AS base
+
+#---------------------------------------------------------------
+FROM registry.access.redhat.com/ubi9-micro:latest AS runtime
 
 LABEL vendor="IBM"
 LABEL summary="The secrets vault."
@@ -13,6 +17,17 @@ ARG VAULT_VERSION
 ARG VAULT_GPGKEY
 ARG ARCH
 ARG VAULT_PLUGIN_HASH
+
+# Copy microdnf necessary files from the base stage
+COPY --from=base /usr/bin/microdnf /usr/bin/
+COPY --from=base /usr/bin/gpg /usr/bin/
+COPY --from=base /usr/bin/gpg2 /usr/bin/
+COPY --from=base /lib64 /lib64/
+COPY --from=base /usr/lib64 /usr/lib64/
+COPY --from=base /usr/lib/rpm /usr/lib/rpm/
+COPY --from=base /etc/dnf /etc/dnf/
+COPY --from=base /etc/rpm /etc/rpm/
+COPY --from=base /etc/pki /etc/pki/
 
 # Create a vault user and group first so the IDs get set the same way.
 
@@ -46,6 +61,7 @@ RUN set -eux; \
     gpgconf --kill dirmngr && \
     gpgconf --kill gpg-agent  && \
     rm -rf /root/.gnupg  && \
+    microdnf install -y curl &&\
     microdnf clean all
 
 # /vault/logs is made available to use as a location to store audit logs
